Added new icons

--- a/MagicCardTracker.Pwa/wwwroot/manifest.json
+++ b/MagicCardTracker.Pwa/wwwroot/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#03173d",
   "icons": [
     {
-      "src": "icon-512.png",
+      "src": "MCT_Logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
