--- a/.github/workflows/continiuos_integration.yml
+++ b/.github/workflows/continiuos_integration.yml
@@ -13,8 +13,9 @@ jobs:
     name: 🚨 Continious Integration
     runs-on: ubuntu-latest
     steps:
-    - uses: 🛠 actions/checkout@v2
-    - name: 🛠 Setup .NET
+    - name: 🔧 Checkout repository
+      uses: actions/checkout@v2
+    - name: 🔧 Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
@@ -22,5 +23,5 @@ jobs:
       run: dotnet restore
     - name: 🛠 Build solution
       run: dotnet build --no-restore
-    - name: 🩺 Test solution
+    - name: 🧬 Test solution
       run: dotnet test --no-build --verbosity normal
