Refactored Settings, Added dynamic GitHub URL in case of forks

--- a/Sources/MagicCardTracker.Pwa/wwwroot/appsettings.json
+++ b/Sources/MagicCardTracker.Pwa/wwwroot/appsettings.json
@@ -6,5 +6,8 @@
     },
     "Collection": {
         "DisplayBatchSize":  100
+    },
+    "Info": {
+        "GitHubUrl": "https://github.com/Horizon0156/MagicCardTracker"
     }
 }
