--- a/Sources/MagicCardTracker.ScryfallClient/MagicCardTracker.ScryfallClient.csproj
+++ b/Sources/MagicCardTracker.ScryfallClient/MagicCardTracker.ScryfallClient.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2"/>
-    <PackageReference Include="NSwag.ApiDescription.Client" Version="13.0.5"/>
-    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0"/>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+    <PackageReference Include="NSwag.ApiDescription.Client" Version="13.14.8"/>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0"/>
   </ItemGroup>
   <ItemGroup>
     <OpenApiReference Include="Resources/ScryfallApi.yml">
