--- a/Sources/MagicCardTracker.Pwa/MagicCardTracker.Pwa.csproj
+++ b/Sources/MagicCardTracker.Pwa/MagicCardTracker.Pwa.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     <Version>1.1.0</Version>
   </PropertyGroup>
