--- a/Sources/MagicCardTracker.ScryfallClient/MagicCardTracker.ScryfallClient.csproj
+++ b/Sources/MagicCardTracker.ScryfallClient/MagicCardTracker.ScryfallClient.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
