--- a/Sources/MagicCardTracker.Storage/MagicCardTracker.Storage.csproj
+++ b/Sources/MagicCardTracker.Storage/MagicCardTracker.Storage.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\MagicCardTracker.Contracts\MagicCardTracker.Contracts.csproj" />
   </ItemGroup>
-
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
 
 </Project>
