fix: Updated Scryfall API definition to support new set types

--- a/Sources/MagicCardTracker.ScryfallClient/Resources/ScryfallApi.yml
+++ b/Sources/MagicCardTracker.ScryfallClient/Resources/ScryfallApi.yml
@@ -1131,7 +1131,9 @@ components:
           - core
           - expansion
           - masters
+          - alchemy
           - masterpiece
+          - arsenal
           - from_the_vault
           - spellbook
           - premium_deck
