fix: Updated Scryfall API client to support bad 'promos' set type

--- a/Sources/MagicCardTracker.ScryfallClient/Resources/ScryfallApi.yml
+++ b/Sources/MagicCardTracker.ScryfallClient/Resources/ScryfallApi.yml
@@ -1151,6 +1151,7 @@ components:
           - starter
           - box
           - promo
+          - promos
           - token
           - memorabilia
           - minigame
