--- a/Sources/MagicCardTracker.Contracts/MagicCardTracker.Contracts.csproj
+++ b/Sources/MagicCardTracker.Contracts/MagicCardTracker.Contracts.csproj
@@ -1,8 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="8.0.1"/>
+  </ItemGroup>
 </Project>
